--- a/.github/workflows/fastertest.yml
+++ b/.github/workflows/fastertest.yml
@@ -12,4 +12,4 @@ jobs:
     - name: Run Playwright tests
       uses: docker://mcr.microsoft.com/playwright:v1.55.0-jammy
       with:
-        args: npx playwright test
+        args: npx playwright test ./tests/*
