--- a/.github/workflows/fastertest.yml
+++ b/.github/workflows/fastertest.yml
@@ -8,8 +8,16 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    container: 
+      image: docker://mcr.microsoft.com/playwright:v1.55.0-jammy
     steps:
-    - name: Run Playwright tests
-      uses: docker://mcr.microsoft.com/playwright:v1.55.0-jammy
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
-        args: npx playwright test
+        node-version: 18
+    - name: Install dependencies
+      run: npm ci
+    - name: Run your tests
+      run: npx playwright test
+      env:
+        HOME: /root
